header desktop markup

--- a/style/css/layout/header.css
+++ b/style/css/layout/header.css
@@ -1,8 +1,31 @@
 .header {
   padding: 15px 0; }
   .header nav {
-    display: flex; }
+    display: grid;
+    grid-template-columns: 1fr 230px 1fr; }
   .header .header__topbar {
-    color: #5363db; }
+    display: flex; }
+    .header .header__topbar li {
+      align-self: center;
+      position: relative; }
+      .header .header__topbar li ~ li {
+        margin-left: 30px; }
+      .header .header__topbar li.active:after {
+        background-color: #5363db;
+        content: '';
+        height: 1px;
+        left: calc(50% - 15px);
+        position: absolute;
+        top: 25px;
+        width: 30px; }
+    .header .header__topbar a {
+      color: #5363db;
+      font-family: 'OpenSansSemiBold', sans-serif;
+      text-decoration: none; }
+    .header .header__topbar-left {
+      margin-left: auto; }
+  .header .header__logo img {
+    height: 70px;
+    margin: 0 auto; }
 
 /*# sourceMappingURL=header.css.map */
