--- a/style/scss/utils/fonts.scss
+++ b/style/scss/utils/fonts.scss
@@ -12,3 +12,4 @@
 
 @include font-face('OpenSans', '../../../fonts/opensans/opensans');
 @include font-face('OpenSansBold', '../../../fonts/opensans/opensansbold');
+@include font-face('OpenSansSemiBold', '../../../fonts/opensans/opensanssemibold');
