--- a/style/css/layout/footer.css
+++ b/style/css/layout/footer.css
@@ -1,11 +1,52 @@
-.footer .footer__top {
+.footer__top {
   background-color: #5b6ceb;
-  padding: 100px 0; }
+  color: white;
+  padding: 95px 0; }
+  .footer__top .footer__top-info {
+    display: flex;
+    padding-bottom: 45px; }
+  .footer__top-column {
+    width: 50%; }
+  .footer__top .footer__column-title {
+    font-family: 'OpenSansBold', sans-serif;
+    font-size: 18px;
+    line-height: 30px;
+    text-transform: uppercase; }
+  .footer__top .footer__column-content {
+    font-family: 'OpenSans', sans-serif;
+    font-size: 14px;
+    padding-top: 50px; }
+    .footer__top .footer__column-content__left {
+      max-width: 470px; }
+    .footer__top .footer__column-content__right {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: 50px;
+      grid-row-gap: 20px; }
+  .footer__top .info-point {
+    padding-left: 35px;
+    position: relative; }
+    .footer__top .info-point:before {
+      position: absolute;
+      left: 0;
+      top: 3px; }
+    .footer__top .info-point__address:before {
+      content: url("../../../img/icons/footer-address.png"); }
+    .footer__top .info-point__email:before {
+      content: url("../../../img/icons/footer-email.png"); }
+    .footer__top .info-point__phone:before {
+      content: url("../../../img/icons/phone-call.png"); }
+    .footer__top .info-point__url:before {
+      content: url("../../../img/icons/planet-earth.png"); }
+  .footer__top .footer__social-list {
+    display: flex; }
+    .footer__top .footer__social-list li {
+      margin-right: 15px; }
 
-.footer .footer__bottom {
+.footer__bottom {
   background-color: #5363d8;
   padding: 35px 0 35px; }
-  .footer .footer__bottom-copyright {
+  .footer__bottom-copyright {
     color: #b7bffc;
     margin: 0 auto;
     text-align: center; }
