--- a/style/scss/layout/footer.scss
+++ b/style/scss/layout/footer.scss
@@ -2,7 +2,7 @@
 
     &__top {
         background-color: #5b6ceb;
-        color: $white_fontColor;
+        color: white;
         padding: 95px 0;
 
         .footer__top-info {
