--- a/style/css/main.css
+++ b/style/css/main.css
@@ -32,7 +32,8 @@ body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  line-height: 1.5; }
+  line-height: 1.5;
+  max-width: 100%; }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
@@ -101,6 +102,55 @@ address {
     height: 70px;
     margin: 0 auto; }
 
+.main-banner {
+  background-image: url("../../../img/slider-bg.png");
+  height: 600px; }
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 350px; }
+  .gallery-item img {
+    display: block;
+    height: 100%;
+    object-fit: cover;
+    width: 100%; }
+  .gallery-item .gallery-link {
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 100%; }
+    .gallery-item .gallery-link__overlay {
+      background: rgba(124, 137, 239, 0.8);
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: .3s ease; }
+      .gallery-item .gallery-link__overlay:before {
+        content: '';
+        position: absolute;
+        background-color: #fff;
+        width: 58px;
+        height: 58px;
+        left: calc(50% - 29px);
+        top: calc(50% - 29px);
+        box-shadow: 0px 9px 9px 0px rgba(0, 0, 0, 0.1);
+        border-radius: 50%; }
+      .gallery-item .gallery-link__overlay:after {
+        content: url("../../../img/icons/glyphicons-28-search.png");
+        left: calc(50% - 12px);
+        top: calc(50% - 12px);
+        position: absolute;
+        height: 24px;
+        width: 24px; }
+    .gallery-item .gallery-link:hover .gallery-link__overlay {
+      opacity: 1; }
+
 .footer__top {
   background-color: #5b6ceb;
   color: white;
@@ -153,10 +203,6 @@ address {
     color: #b7bffc;
     margin: 0 auto;
     text-align: center; }
-
-.main-banner {
-  background-image: url("../../../img/slider-bg.png");
-  height: 600px; }
 
 @font-face {
   font-family: "OpenSans";
