--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -3,6 +3,7 @@
 @import './base/global.scss';
 
 @import './layout/header.scss';
-@import './layout/footer.scss';
 @import './layout/main-banner.scss';
+@import './layout/gallery.scss';
+@import './layout/footer.scss';
 @import './utils/fonts.scss';
