--- a/style/css/main.css
+++ b/style/css/main.css
@@ -151,6 +151,39 @@ address {
     .gallery-item .gallery-link:hover .gallery-link__overlay {
       opacity: 1; }
 
+.advantages {
+  background-image: url("../../../img/advantages-bg.png");
+  padding: 100px 0; }
+  .advantages__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 300px;
+    grid-column-gap: 30px; }
+  .advantages__item {
+    color: white;
+    text-align: center; }
+    .advantages__item .icon {
+      border: 2px solid #fff;
+      border-radius: 50%;
+      height: 70px;
+      margin: 0 auto;
+      width: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 30px; }
+      .advantages__item .icon img {
+        display: block;
+        margin: auto; }
+    .advantages__item .title {
+      font-family: 'OpenSansBold', sans-serif;
+      font-size: 18px;
+      max-width: 200px;
+      margin: 0 auto 15px; }
+    .advantages__item .description {
+      font-family: 'OpenSans', sans-serif;
+      font-size: 16px; }
+
 .footer__top {
   background-color: #5b6ceb;
   color: white;
