--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -5,5 +5,6 @@
 @import './layout/header.scss';
 @import './layout/main-banner.scss';
 @import './layout/gallery.scss';
+@import './layout/advantages.scss';
 @import './layout/footer.scss';
 @import './utils/fonts.scss';
