--- a/style/scss/layout/advantages.scss
+++ b/style/scss/layout/advantages.scss
@@ -33,8 +33,9 @@
         .title {
             font-family: 'OpenSansBold', sans-serif;
             font-size: 18px;
+            height: 70px;
             max-width: 200px;
-            margin: 0 auto 15px;
+            margin: 0 auto;
         }
 
         .description {
