--- a/style/scss/utils/fonts.scss
+++ b/style/scss/utils/fonts.scss
@@ -13,3 +13,5 @@
 @include font-face('OpenSans', '../../../fonts/opensans/opensans');
 @include font-face('OpenSansBold', '../../../fonts/opensans/opensansbold');
 @include font-face('OpenSansSemiBold', '../../../fonts/opensans/opensanssemibold');
+
+@include font-face('FreeStyleRegular', '../../../fonts/freestyle/FreestyleScriptRegular');
