--- a/style/css/layout/advantages.css
+++ b/style/css/layout/advantages.css
@@ -25,8 +25,9 @@
     .advantages__item .title {
       font-family: 'OpenSansBold', sans-serif;
       font-size: 18px;
+      height: 70px;
       max-width: 200px;
-      margin: 0 auto 15px; }
+      margin: 0 auto; }
     .advantages__item .description {
       font-family: 'OpenSans', sans-serif;
       font-size: 16px; }
