--- a/style/css/main.css
+++ b/style/css/main.css
@@ -106,6 +106,58 @@ address {
   background-image: url("../../../img/slider-bg.png");
   height: 600px; }
 
+.program {
+  padding: 100px 0; }
+  .program .section-title {
+    color: #5b6ceb;
+    text-transform: uppercase;
+    font-family: 'OpenSansBold', sans-serif;
+    font-size: 30px;
+    line-height: 60px;
+    text-align: center; }
+  .program .section-subtitle {
+    color: #777;
+    font-family: 'FreeStyleRegular', sans-serif;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+    padding-bottom: 70px; }
+  .program__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 300px;
+    grid-column-gap: 30px;
+    grid-row-gap: 25px; }
+  .program__item .wraper {
+    border-radius: 8px;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
+    display: flex;
+    height: 300px; }
+  .program__item .program-img {
+    background-color: #5b6ceb;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    width: 270px;
+    flex-shrink: 0; }
+    .program__item .program-img img {
+      height: 100%;
+      object-fit: cover;
+      width: 100%; }
+  .program__item .program-info {
+    padding: 45px 29px; }
+    .program__item .program-info .title {
+      color: #777;
+      font-size: 20px;
+      font-family: 'OpenSansBold', serif;
+      height: 50px;
+      text-transform: uppercase; }
+    .program__item .program-info .description {
+      color: #555;
+      line-height: 24px;
+      padding-bottom: 10px; }
+    .program__item .program-info .couch {
+      color: #999; }
+
 .gallery {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -178,8 +230,9 @@ address {
     .advantages__item .title {
       font-family: 'OpenSansBold', sans-serif;
       font-size: 18px;
+      height: 70px;
       max-width: 200px;
-      margin: 0 auto 15px; }
+      margin: 0 auto; }
     .advantages__item .description {
       font-family: 'OpenSans', sans-serif;
       font-size: 16px; }
@@ -257,5 +310,12 @@ address {
   font-style: normal;
   src: url("../../../fonts/opensans/opensanssemibold.eot");
   src: url("../../../fonts/opensans/opensanssemibold.eot?#iefix") format("embedded-opentype"), url("../../../fonts/opensans/opensanssemibold.woff") format("woff"), url("../../../fonts/opensans/opensanssemibold.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "FreeStyleRegular";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../../../fonts/freestyle/FreestyleScriptRegular.eot");
+  src: url("../../../fonts/freestyle/FreestyleScriptRegular.eot?#iefix") format("embedded-opentype"), url("../../../fonts/freestyle/FreestyleScriptRegular.woff") format("woff"), url("../../../fonts/freestyle/FreestyleScriptRegular.ttf") format("truetype"); }
 
 /*# sourceMappingURL=main.css.map */
