--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -4,6 +4,7 @@
 
 @import './layout/header.scss';
 @import './layout/main-banner.scss';
+@import './layout/program.scss';
 @import './layout/gallery.scss';
 @import './layout/advantages.scss';
 @import './layout/footer.scss';
