--- a/style/css/main.css
+++ b/style/css/main.css
@@ -103,12 +103,62 @@ address {
     margin: 0 auto; }
 
 .main-banner {
+  color: #fff;
   background-image: url("../../../img/slider-bg.png");
-  height: 600px; }
+  height: 600px;
+  padding: 100px 0; }
+  .main-banner__container {
+    display: flex; }
+  .main-banner__column {
+    width: 50%; }
+  .main-banner__form {
+    background-color: #fff;
+    border-radius: 8px;
+    max-width: 300px;
+    margin: 0 20px auto auto;
+    padding: 40px 30px; }
+    .main-banner__form .title {
+      color: #5363db;
+      font-family: 'OpenSansSemiBold', sans-serif;
+      font-size: 25px;
+      padding-bottom: 20px; }
+    .main-banner__form input, .main-banner__form select {
+      border: none;
+      color: #888;
+      border-radius: 8px;
+      background-color: #f2f2f2;
+      height: 50px;
+      margin-bottom: 15px;
+      padding: 0 10px;
+      width: 100%; }
+    .main-banner__form .form-btn {
+      color: #fff;
+      display: block;
+      margin-left: auto;
+      font-size: 16px;
+      font-family: "OpenSansBold";
+      border-radius: 8px;
+      background-color: #5b6ceb;
+      box-shadow: 2.121px 2.121px 5px 0px rgba(0, 0, 0, 0.15);
+      height: 50px;
+      margin-top: 15px;
+      width: 170px; }
+  .main-banner .banner-title {
+    font-family: "OpenSansBold";
+    font-size: 48px;
+    text-transform: uppercase;
+    padding-left: 35px;
+    padding-top: 60px; }
+  .main-banner .banner-subtitle {
+    font-family: 'FreeStyleRegular', sans-serif;
+    font-size: 40px;
+    line-height: 50px;
+    padding-left: 35px;
+    padding-top: 40px; }
 
 .program {
   padding: 100px 0; }
-  .program .section-title {
+  .program h1 {
     color: #5b6ceb;
     text-transform: uppercase;
     font-family: 'OpenSansBold', sans-serif;
@@ -269,6 +319,9 @@ address {
       position: absolute;
       left: 0;
       top: 3px; }
+    .footer__top .info-point a {
+      text-decoration: none;
+      color: #fff; }
     .footer__top .info-point__address:before {
       content: url("../../../img/icons/footer-address.png"); }
     .footer__top .info-point__email:before {
