--- a/style/scss/layout/footer.scss
+++ b/style/scss/layout/footer.scss
@@ -45,6 +45,11 @@
                 top: 3px;
             }
 
+            a {
+                text-decoration: none;
+                color: #fff;
+            }
+
             &__address {
                 &:before {
                     content:url('../../../img/icons/footer-address.png');
