--- a/style/scss/layout/main-banner.scss
+++ b/style/scss/layout/main-banner.scss
@@ -1,4 +1,70 @@
 .main-banner {
+    color: #fff;
     background-image: url('../../../img/slider-bg.png');
     height: 600px;
+    padding: 100px 0;
+
+    &__container {
+        display: flex;
+    }
+
+    &__column {
+        width: 50%; 
+    }
+
+    &__form {
+        background-color: #fff;
+        border-radius: 8px;
+        max-width: 300px;
+        margin: 0 20px auto auto;
+        padding: 40px 30px;
+
+        .title {
+            color: #5363db;
+            font-family: 'OpenSansSemiBold', sans-serif;
+            font-size: 25px;
+            padding-bottom: 20px;
+        }
+
+        input, select {
+            border: none;
+            color: #888;
+            border-radius: 8px;
+            background-color: rgb(242, 242, 242);
+            height: 50px;
+            margin-bottom: 15px;
+            padding: 0 10px;
+            width: 100%;
+        }
+
+        .form-btn {
+            color: #fff;
+            display: block;
+            margin-left: auto;
+            font-size: 16px;
+            font-family: "OpenSansBold";
+            border-radius: 8px;
+            background-color: rgb(91, 108, 235);
+            box-shadow: 2.121px 2.121px 5px 0px rgba(0, 0, 0, 0.15);
+            height: 50px;
+            margin-top:15px;
+            width: 170px;              
+        }
+    }
+
+    .banner-title {
+        font-family: "OpenSansBold";
+        font-size: 48px;
+        text-transform: uppercase;
+        padding-left: 35px;
+        padding-top: 60px;
+    }
+
+    .banner-subtitle {
+        font-family: 'FreeStyleRegular', sans-serif;
+        font-size: 40px;
+        line-height: 50px;
+        padding-left: 35px;
+        padding-top: 40px;
+    }
 }
