--- a/style/scss/layout/program.scss
+++ b/style/scss/layout/program.scss
@@ -1,7 +1,7 @@
 .program {
     padding: 100px 0;
 
-    .section-title {
+    h1 {
         color: #5b6ceb;
         text-transform: uppercase;
         font-family: 'OpenSansBold', sans-serif;
