about desktop markup

--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -6,6 +6,7 @@
 @import './layout/main-banner.scss';
 @import './layout/program.scss';
 @import './layout/gallery.scss';
+@import './layout/about-us.scss';
 @import './layout/advantages.scss';
 @import './layout/footer.scss';
 @import './utils/fonts.scss';
