--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -8,5 +8,6 @@
 @import './layout/gallery.scss';
 @import './layout/about-us.scss';
 @import './layout/advantages.scss';
+@import './layout/shop.scss';
 @import './layout/footer.scss';
 @import './utils/fonts.scss';
