--- a/style/css/utils/fonts.css
+++ b/style/css/utils/fonts.css
@@ -20,6 +20,13 @@
   src: url("../../../fonts/opensans/opensanssemibold.eot?#iefix") format("embedded-opentype"), url("../../../fonts/opensans/opensanssemibold.woff") format("woff"), url("../../../fonts/opensans/opensanssemibold.ttf") format("truetype"); }
 
 @font-face {
+  font-family: "OpenSansItalic";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../../../fonts/opensans/opensansitalic.eot");
+  src: url("../../../fonts/opensans/opensansitalic.eot?#iefix") format("embedded-opentype"), url("../../../fonts/opensans/opensansitalic.woff") format("woff"), url("../../../fonts/opensans/opensansitalic.ttf") format("truetype"); }
+
+@font-face {
   font-family: "FreeStyleRegular";
   font-weight: normal;
   font-style: normal;
