--- a/style/scss/layout/shop.scss
+++ b/style/scss/layout/shop.scss
@@ -1,7 +1,7 @@
 .shop {
     background-image: url('../../../img/--lotos-decoration.png');
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: right bottom;
     padding: 100px 0 155px;
 
     .offers {
@@ -72,6 +72,185 @@
             font-size: 18px;
             margin: 0 auto;
             width: 170px;
+        }
+    }
+
+    .reviews {
+        border-radius: 8px;
+        box-shadow: 0px 9px 50px 0px rgba(0, 0, 0, 0.1);
+        background-color: #fff;
+        padding: 35px 60px 65px;
+        margin-top: 105px;  
+        display: flex;
+        position: relative;
+
+        .photo-column {
+            width: 170px;
+        }
+
+        .img-wrap {
+            border: 2px solid #d8d8d8;
+            border-radius: 50%;
+            height: 148px;
+            width: 148px;
+            padding: 9px;
+
+            img {
+                margin: auto;
+                display: block;
+                object-fit: cover;
+            }
+        }
+
+        .review-column {
+            max-width: 800px;
+            padding: 15px 65px;
+            position: relative;            
+        }
+
+        .review-text {
+            color: #555;
+            font-family: 'OpenSansItalic', sans-serif;
+            position: relative;
+            margin-bottom: 30px;
+
+
+            &:before {
+                content: url('../../../img/icons/frase-before.png');
+                position: absolute;
+                top: 0;
+                left: -50px;
+            }
+
+            &:after {
+                content: url('../../../img/icons/frase-after.png');
+                position: absolute;
+                bottom: -10px;
+                right: -50px;
+            }
+        }
+
+        .review-person {
+            position: relative;
+
+            .position {
+                color: #777;
+            }
+
+            .name {
+                color: #5b6ceb;
+                font-size: 16px;
+                font-family: 'OPenSansBold', sans-serif;
+            }
+
+            &:after {
+                content: '';
+                position: absolute;
+                bottom: 5px;
+                left: -50px;
+                width: 2px;
+                height: 75px;
+                background-color: #d7d7d7;
+            }
+        }
+
+        .review-slider {
+            position: absolute;
+            bottom: -100px;
+
+            .slider-wrap {
+                position: relative;
+                width: 280px;
+            }
+
+            .slider-author {
+                display: flex;
+                margin: 0 auto;
+                max-width: 170px;
+            }
+
+            .img-wrap {
+                height: 72px;
+                width: 72px;
+            }
+
+            .text-wrap { 
+                padding-left: 15px;
+                padding-top: 15px;
+
+                .name {
+                    font-family: 'OpenSansBold', sans-serif;
+                    color: #555;
+                }
+
+                .position {
+                    font-size: 12px;
+                    color: #777;
+                }
+            }
+
+            .prev-btn, 
+            .next-btn {
+                background-color: #fff;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 8px;
+                cursor: pointer;
+                box-shadow: 0px 9px 9px 0px rgba(0, 0, 0, 0.1);
+                border-radius: 50%;
+                height: 30px;
+                position: absolute;
+                top: calc(50% - 15px);
+                width: 30px;
+                z-index: 10;
+                transition: .3s;
+            }
+
+            .prev-btn {
+                background-image: url('../../../img/icons/prev-arrow.png');
+                left: 0;
+
+                &:hover {
+                    transform: translateX(-3px);
+                }
+            }
+
+            .next-btn {
+                background-image: url('../../../img/icons/next-arrow.png');
+                right: 0;
+
+                &:hover {
+                    transform: translateX(3px);
+                }
+            }
+        }
+
+        .slider-dots {
+            position: absolute;
+            right: -45px;
+            top: 45px;
+
+            li {
+                display: block;
+                border: 2px solid #5b6ceb;
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                margin-bottom: 18px;
+                position: relative;
+                cursor: pointer;
+
+                &.active:before {
+                    content: '';
+                    position: absolute;
+                    width: 10px;
+                    height: 10px;
+                    background-color: #5b6ceb;
+                    border-radius: 50%;
+                    top: 3px;
+                    left: 3px;
+                }
+            }
         }
     }
 }
