--- a/style/scss/utils/fonts.scss
+++ b/style/scss/utils/fonts.scss
@@ -13,5 +13,6 @@
 @include font-face('OpenSans', '../../../fonts/opensans/opensans');
 @include font-face('OpenSansBold', '../../../fonts/opensans/opensansbold');
 @include font-face('OpenSansSemiBold', '../../../fonts/opensans/opensanssemibold');
+@include font-face('OpenSansItalic', '../../../fonts/opensans/opensansitalic');
 
 @include font-face('FreeStyleRegular', '../../../fonts/freestyle/FreestyleScriptRegular');
