--- a/style/scss/layout/main-banner.scss
+++ b/style/scss/layout/main-banner.scss
@@ -37,6 +37,12 @@
             width: 100%;
         }
 
+        label {
+            color: red;
+            margin-top: -15px;
+            display: block;
+        }
+
         .form-btn {
             color: #fff;
             display: block;
