--- a/style/scss/utils/fonts.scss
+++ b/style/scss/utils/fonts.scss
@@ -5,7 +5,7 @@
         font-style: $style;
         src: url('#{$file-path}.eot');
         src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'), 
-        url('#{$file-path}.woff') format('woff'), 
+        // url('#{$file-path}.woff') format('woff'), 
         url('#{$file-path}.ttf') format('truetype');
     }
 }
