--- a/style/css/main.css
+++ b/style/css/main.css
@@ -73,7 +73,15 @@ address {
   width: 1200px; }
 
 .header {
-  padding: 15px 0; }
+  background-color: #fff;
+  padding: 15px 0;
+  position: fixed;
+  top: 0;
+  transition: 1s;
+  height: 100px;
+  width: 100%;
+  max-width: 100vw;
+  z-index: 700; }
   .header nav {
     display: grid;
     grid-template-columns: 1fr 230px 1fr; }
@@ -103,6 +111,7 @@ address {
     margin: 0 auto; }
 
 .main-banner {
+  margin-top: 100px;
   color: #fff;
   background-image: url("../../../img/slider-bg.png");
   height: 600px;
