--- a/style/scss/layout/header.scss
+++ b/style/scss/layout/header.scss
@@ -1,5 +1,13 @@
 .header {
+    background-color: #fff;
     padding: 15px 0;
+    position: fixed;
+    top: 0;
+    transition: 1s;
+    height: 100px;
+    width: 100%;
+    max-width: 100vw;
+    z-index: 700;
 
     nav {
         display: grid;
