--- a/style/css/base/refresh.css
+++ b/style/css/base/refresh.css
@@ -1,16 +1,23 @@
 @charset "UTF-8";
+
 /* Указываем box sizing */
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 /* Убираем внутренние отступы */
+
 ul[class],
 ol[class] {
-  padding: 0; }
+  padding: 0;
+}
 
 /* Убираем внешние отступы */
+
 body,
 h1,
 h2,
@@ -25,42 +32,56 @@ figcaption,
 blockquote,
 dl,
 dd {
-  margin: 0; }
+  margin: 0;
+}
 
 /* Выставляем основные настройки по-умолчанию для body */
+
 body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
+
 ul[class],
 ol[class] {
-  list-style: none; }
+  list-style: none;
+}
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+
 a:not([class]) {
-  text-decoration-skip-ink: auto; }
+  -webkit-text-decoration-skip: ink;
+  text-decoration-skip-ink: auto;
+}
 
 /* Упрощаем работу с изображениями */
+
 img {
   max-width: 100%;
-  display: block; }
+  display: block;
+}
 
 /* Указываем понятную периодичность в потоке данных у article*/
+
 article > * + * {
-  margin-top: 1em; }
+  margin-top: 1em;
+}
 
 /* Наследуем шрифты для инпутов и кнопок */
+
 input,
 button,
 textarea,
 select {
-  font: inherit; }
+  font: inherit;
+}
 
 address {
-  font-style: normal; }
-
+  font-style: normal;
+}
 /*# sourceMappingURL=refresh.css.map */
