--- a/style/css/layout/advantages.css
+++ b/style/css/layout/advantages.css
@@ -1,35 +1,53 @@
 .advantages {
   background-image: url("../../../img/advantages-bg.png");
-  padding: 100px 0; }
-  .advantages__list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 300px;
-    grid-column-gap: 30px; }
-  .advantages__item {
-    color: white;
-    text-align: center; }
-    .advantages__item .icon {
-      border: 2px solid #fff;
-      border-radius: 50%;
-      height: 70px;
-      margin: 0 auto;
-      width: 70px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 30px; }
-      .advantages__item .icon img {
-        display: block;
-        margin: auto; }
-    .advantages__item .title {
-      font-family: 'OpenSansBold', sans-serif;
-      font-size: 18px;
-      height: 70px;
-      max-width: 200px;
-      margin: 0 auto; }
-    .advantages__item .description {
-      font-family: 'OpenSans', sans-serif;
-      font-size: 16px; }
+  padding: 100px 0;
+}
 
+.advantages__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 300px;
+  grid-column-gap: 30px;
+}
+
+.advantages__item {
+  color: white;
+  text-align: center;
+}
+
+.advantages__item .icon {
+  border: 2px solid #fff;
+  border-radius: 50%;
+  height: 70px;
+  margin: 0 auto;
+  width: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.advantages__item .icon img {
+  display: block;
+  margin: auto;
+}
+
+.advantages__item .title {
+  font-family: 'OpenSansBold', sans-serif;
+  font-size: 18px;
+  height: 70px;
+  max-width: 200px;
+  margin: 0 auto;
+}
+
+.advantages__item .description {
+  font-family: 'OpenSans', sans-serif;
+  font-size: 16px;
+}
 /*# sourceMappingURL=advantages.css.map */
